RESOLVED FIXED305376
History events may fire with incorrect original request in Enhanced Security
https://bugs.webkit.org/show_bug.cgi?id=305376
Summary History events may fire with incorrect original request in Enhanced Security
ronan_turner
Reported 2026-01-13 03:48:00 PST
Attachments
ronan_turner
Comment 1 2026-01-19 04:07:13 PST
EWS
Comment 2 2026-01-27 02:49:37 PST
Committed 306272@main (00b6b38f4c2f): <https://commits.webkit.org/306272@main> Reviewed commits have been landed. Closing PR #56824 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.